<resources>
    <string name="app_name">NoYu</string>
    <string name="home">Home</string>
    <string name="movie">Movie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="masukan_nama">Masukan nama</string>
    <string name="masuk">Masuk</string>
    <string name="name">Name</string>
    <string name="welcome">Welcome</string>
    <string name="sinopsis">sinopsis</string>
    <string name="rating">rating</string>
    <string name="imdb">IMDb</string>
    <string name="genre">genre</string>
    <string name="usia">usia</string>
    <string name="judul">Judul</string>
    <string name="tahun_terbit">Tahun terbit</string>
    <string name="aktor">Aktor</string>
    <string name="nama_aktor">Nama aktor</string>
    <string name="reference">Reference</string>
    <string name="point">:</string>
    <string name="share">Share</string>


</resources>