<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:scrollbars="none"
    android:background="@drawable/ic_detail"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_photo_detail"
                tools:src="@tools:sample/avatars"
                android:layout_width="140dp"
                android:layout_height="200dp"
                android:paddingStart="10dp"
                android:layout_marginEnd="15dp"
                android:scaleType="centerCrop"
                android:layout_marginBottom="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="65dp"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow>
                        <TextView
                            android:id="@+id/tv_usia_detail"
                            android:layout_width="40dp"
                            android:text="@string/usia"
                            android:textColor="@color/white"
                            android:fontFamily="@font/montserrat_regular"
                            android:textSize="15sp"
                            android:layout_marginEnd="12dp"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:id="@+id/tv_tahun_detail"
                            android:layout_width="134dp"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/tahun_terbit"
                            android:textColor="@color/white"
                            android:ellipsize="end"
                            android:textSize="12sp"/>
                    </TableRow>
                </TableLayout>

                <TableLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow>
                        <ImageView
                            android:layout_marginTop="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_rating"/>

                        <TableLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_marginStart="8dp"
                                android:textSize="12sp"
                                android:textColor="@color/white"
                                android:fontFamily="@font/montserrat_regular"
                                android:text="@string/imdb"/>

                            <TextView
                                android:id="@+id/tv_rating_detail"
                                android:layout_marginStart="8dp"
                                android:textColor="@color/white"
                                android:textSize="12sp"
                                android:fontFamily="@font/montserrat_regular"
                                android:text="@string/rating"/>

                        </TableLayout>
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_judul_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_bold"/>

        <TextView
            android:id="@+id/tv_sinopsis_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sinopsis"
            android:textSize="15sp"
            android:justificationMode="inter_word"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_regular"/>
        <TextView
            android:id="@+id/tv_genre_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aktor"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_bold"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_aktor_detail"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:civ_border_overlay="true"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp"
                tools:src="@tools:sample/avatars"/>

            <TextView
                android:id="@+id/tv_nama_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="12sp"
                android:text="@string/nama_aktor"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reference"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_bold"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_reference_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reference"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:justificationMode="inter_word"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat_regular"/>

    </LinearLayout>
</ScrollView>